express setup files

--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>UI-Book</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/lib/prismjs/prism.css">
-    <link rel="stylesheet" href="./src/styles/app.css">
-    <script src="/src/lib/prismjs/prism.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="lib/prismjs/prism.css">
+    <link rel="stylesheet" href="styles/app.css">
+    <script src="lib/prismjs/prism.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="#">Angular <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">React</a>
+                        <a class="nav-link" href="./src/react/index.html">React</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Disabled</a>
