routing and templating changes

--- a/src/views/ngrx/index.ejs
+++ b/src/views/ngrx/index.ejs
@@ -12,13 +12,14 @@
 
 <body>
     <header>
-        <%- include common/main-nav.ejs %>
+        <%- include ../common/main-nav.ejs %>
     </header>
     <div class="container-fluid page">
         <div class="row">
-            <%- include angular/side-nav.ejs %>
+            <%- include ../ngrx/side-nav.ejs %>
             <main class="col-md-10">
-                <%- include angular/index.ejs %> 
+                <h1>Ngrx heading</h1>
+                <p>Sample Content</p>
             </main>
         </div>
 
