--- a/src/views/ngrx/side-nav.ejs
+++ b/src/views/ngrx/side-nav.ejs
@@ -2,19 +2,27 @@
     <div class="sidebar-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="#">
-                    Introduction <span class="sr-only">(current)</span>
+                <a class="nav-link active" href="/ngrx">
+                    Introduction </span>
+                </a>
+            </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="/ngrx/concepts">
+                        Redux Concepts
+                    </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    Effects
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">
-                    Actions
+                    Code Implementation flow
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    Reducers
-                </a>
+            <li>
+                <a class="nav-link" href="/ngrx/reflinks">Good-Reads</a>
             </li>
         </ul>
     </div>
