--- a/src/views/react/side-nav.ejs
+++ b/src/views/react/side-nav.ejs
@@ -16,6 +16,11 @@
                     Routing
                 </a>
             </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="/react/test">
+                        Test
+                    </a>
+                </li>
         </ul>
     </div>
 </nav>
