--- a/src/views/ngrx/side-nav.ejs
+++ b/src/views/ngrx/side-nav.ejs
@@ -12,6 +12,11 @@
                     </a>
             </li>
             <li class="nav-item">
+                    <a class="nav-link" href="/ngrx/immutability">
+                        Immutability
+                    </a>
+                </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">
                     Effects
                 </a>
