--- a/src/views/common/main-nav.ejs
+++ b/src/views/common/main-nav.ejs
@@ -12,6 +12,9 @@
                 <a class="nav-link" href="/ngrx">Ngrx</a>
             </li>
             <li class="nav-item">
+                    <a class="nav-link" href="/rxjs">Rxjs</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li>
         </ul>
