--- a/src/views/ngrx/reflinks.ejs
+++ b/src/views/ngrx/reflinks.ejs
@@ -17,6 +17,8 @@
                 <section>
                    <ul>
                        <li><a href="https://brianflove.com/2018/01/08/ngrx-the-basics/" target="_blank">Angular + NgRx: The Basics</a></li>
+                       <li><a href="https://toddmotto.com/ngrx-store-understanding-state-selectors">NGRX Store: Understanding State Selectors</a></li>
+                       <li><a href="https://medium.com/@tanya/understanding-ngrx-effects-and-the-action-stream-1a74996a0c1c">Understanding NgRx Effects and the Action Stream</a></li>
                    </ul>
                 </section>
             </main>
