--- a/src/views/react/side-nav.ejs
+++ b/src/views/react/side-nav.ejs
@@ -2,23 +2,28 @@
     <div class="sidebar-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="/react">
                     Introduction <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/react/forms">
                     Forms
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/react/routing">
                     Routing
                 </a>
             </li>
             <li class="nav-item">
-                    <a class="nav-link" href="/react/test">
-                        Test
+                <a class="nav-link" href="/react/hooks">
+                    Hooks
+                </a>
+            </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="/react/reflinks">
+                        Reference links
                     </a>
                 </li>
         </ul>
